--- a/man/strings.1
+++ b/man/strings.1
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 24, 2021
+.Dd October 26, 2021
 .Dt STRINGS 1
 .Os
 .Sh NAME
@@ -203,6 +203,8 @@ Beyond Plan 9 and Inferno, UTF-encoded characters are supported in all
 (but POSIX and Unix v10) flavours with the
 .Fl e Ar u | Fl -encoding= Ns Ar u
 options.
+.Sh PORTABILITY
+Tested OK under Windows.
 .Sh HISTORY
 The first
 .Nm
